--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/Fran-kG90/proyectos
 [submodule "cc"]
 	path = cc
-	url = https://github.com/Fran-kG90/proyectos
+	url = https://github.com/Fran-kG90/proyectos/cc
