--- a/examen/src/main/resources/application.properties
+++ b/examen/src/main/resources/application.properties
@@ -6,3 +6,19 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
+
+
+
+#server.address=localhost
+#server.port=8191
+#
+#spring.datasource.url=jdbc:mysql://localhost/employee_exam?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=sasa
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.ddl-auto=update
+#logging.level.org.hibernate.SQL=debug
+#
+#spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
