--- a/examen/src/main/resources/application.properties
+++ b/examen/src/main/resources/application.properties
@@ -1,24 +1,14 @@
-
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/examen
-spring.datasource.username=system
-spring.datasource.password=root
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create
-
-
-
-#server.address=localhost
-#server.port=8191
-#
-#spring.datasource.url=jdbc:mysql://localhost/employee_exam?useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=sasa
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.username=SYSTEM
+spring.datasource.password=manager
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql=true 
+spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle10gDialect
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 #logging.level.org.hibernate.SQL=debug
-#
-#spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+server.port = 9092
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
